created filter on server to retrieve channels that a user joined #31
